# oh-my-claude-code

./: .gitignore  .pre-commit-config.yaml  .worktreeinclude  CLAUDE.md  README.md  claude_mem.md  generate_ascend_ppt.py  pyproject.toml
.claude/: .mcp.json  README.md  settings.json  statusline.sh
.claude/agents/: architect.md  code-reviewer.md  debugger.md  doc-writer.md  library-integration.md  perf-analyzer.md  refactor.md  shell-expert.md  test-writer.md
.claude/commands/: precheck.md  status.md
.claude/hooks/: compact-restore.sh  config-audit.sh  log-agent.sh  log-commands.sh  notify.sh  post-tool-use.sh  pre-tool-use.sh  reload-env.sh  session-init.sh  session-summary.sh  stop-failure.sh
.claude/output-styles/: chinese-concise.md  code-only.md  diagrams-first.md
.claude/rules/: git-conventions.md  python-style.md  shell-style.md
.claude/skills/01-Check/check/: SKILL.md
.claude/skills/01-Check/shell-check/: SKILL.md
.claude/skills/02-GitHub/codebase-inspection/: SKILL.md
.claude/skills/02-GitHub/github-auth/: SKILL.md
.claude/skills/02-GitHub/github-code-review/: SKILL.md
.claude/skills/02-GitHub/github-issues/: SKILL.md
.claude/skills/02-GitHub/github-pr-workflow/: SKILL.md
.claude/skills/02-GitHub/github-repo-management/: SKILL.md
.claude/skills/02-GitHub/requesting-code-review/: SKILL.md
.claude/skills/03-Dev/hermes-agent-skill-authoring/: SKILL.md
.claude/skills/03-Dev/karpathy-guidelines/: SKILL.md
.claude/skills/03-Dev/node-inspect-debugger/: SKILL.md
.claude/skills/03-Dev/plan/: SKILL.md
.claude/skills/03-Dev/python-debugpy/: SKILL.md
.claude/skills/03-Dev/simplify-code/: SKILL.md
.claude/skills/03-Dev/spike/: SKILL.md
.claude/skills/03-Dev/systematic-debugging/: SKILL.md
.claude/skills/03-Dev/test-driven-development/: SKILL.md
.claude/skills/04-Research/arxiv/: SKILL.md
.claude/skills/04-Research/blogwatcher/: SKILL.md
.claude/skills/04-Research/llm-wiki/: SKILL.md
.claude/skills/04-Research/obsidian/: SKILL.md
.claude/skills/04-Research/tech-doc-translator/: SKILL.md
.claude/skills/05-MLOps/audiocraft-audio-generation/: SKILL.md
.claude/skills/05-MLOps/evaluating-llms-harness/: SKILL.md
.claude/skills/05-MLOps/huggingface-hub/: SKILL.md
.claude/skills/05-MLOps/llama-cpp/: SKILL.md
.claude/skills/05-MLOps/obliteratus/: SKILL.md
.claude/skills/05-MLOps/segment-anything-model/: SKILL.md
.claude/skills/05-MLOps/vllm/: SKILL.md
.claude/skills/05-MLOps/weights-and-biases/: SKILL.md
.claude/skills/check/: SKILL.md
.claude/skills/github/codebase-inspection/: SKILL.md
.claude/skills/github/github-code-review/: SKILL.md
.claude/skills/github/github-pr-workflow/: SKILL.md
.claude/skills/github/github-repo-management/: SKILL.md
.claude/skills/mlops/evaluating-llms-harness/: SKILL.md
.claude/skills/mlops/obliteratus/: SKILL.md
.claude/skills/mlops/segment-anything-model/: SKILL.md
.claude/skills/mlops/vllm/: SKILL.md
.claude/skills/mlops/weights-and-biases/: SKILL.md
.claude/skills/research/arxiv/: SKILL.md
.claude/skills/research/arxiv/scripts/: search_arxiv.py
.claude/skills/research/llm-wiki/: SKILL.md
.claude/skills/shell-check/: SKILL.md
.claude/skills/software-development/karpathy-guidelines/: SKILL.md
.claude/skills/software-development/plan/: SKILL.md
.claude/skills/software-development/simplify-code/: SKILL.md
.claude/skills/software-development/test-driven-development/: SKILL.md
.claude/skills/tech-doc-translator/: SKILL.md
.claude/skills/vllm-skills/vllm-ascend/: SKILL.md
.claude/skills/vllm-skills/vllm-bench-random-synthetic/: SKILL.md
.claude/skills/vllm-skills/vllm-bench-serve/: SKILL.md
.claude/skills/vllm-skills/vllm-deploy-docker/: SKILL.md
.claude/skills/vllm-skills/vllm-deploy-k8s/: SKILL.md
.claude/skills/vllm-skills/vllm-deploy-k8s/templates/: vllm-deployment.yaml  vllm-service.yaml
.claude/skills/vllm-skills/vllm-deploy-simple/: SKILL.md
.claude/skills/vllm-skills/vllm-prefix-cache-bench/: SKILL.md
docs/: create-ascend-ppt.js  gpu-ascend-ecosystem-report.pptx  gpu-ascend-llm-ecosystem-research.md  大模型后训练.md  大模型推理.md  大模型训练.md  昇腾大模型实践.md
prompts/: prompt.md  prompt2.md
scripts/: generate_gpu_ascend_ppt.py
