[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "minivllm"
version = "0.1.0"
description = "A lightweight LLM inference engine built from scratch, inspired by vLLM"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "jianzhnie" }]
requires-python = ">=3.10"
keywords = ["llm", "inference", "vllm", "kv-cache", "tensor-parallelism"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.2.0",
    "transformers>=4.37.0",
    "xxhash",
    "colorama",
    "numpy>=1.21",
    "tqdm>=4.62.0",
    "safetensors>=0.4.0",
]

[project.optional-dependencies]
cuda = [
    "flash-attn>=2.6.0",
    "triton>=2.3.0",
]
npu = [
    "torch-npu>=2.2.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.6.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "psutil>=5.9.0",
]

[project.urls]
Homepage = "https://github.com/jianzhnie/mini-vllm"

[tool.setuptools.packages.find]
where = ["."]
include = ["minivllm*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint]
select = [
    "F",     # Pyflakes
    "E",     # Pycodestyle errors
    "W",     # Pycodestyle warnings
    "I",     # Isort (import sorting)
    "B",     # Flake8-bugbear
    "C4",    # Flake8-comprehensions
    "SIM",   # Flake8-simplify
    "UP",    # Pyupgrade (modernize syntax to 3.10+)
    "RUF100",# Detect unused # noqa directives
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["minivllm"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "examples/",
]
warn_unreachable = true
warn_no_return = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--tb=short", "--strict-markers"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "cuda: marks tests requiring CUDA device",
    "npu: marks tests requiring NPU device",
]
